workloads/cart-service/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: cart-service
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  template:
    metadata:
      labels:
        security.localy.io/zero-trust: "enforced"
    spec:
      terminationGracePeriodSeconds: 60
      readinessGates: []
      nodeSelector:
        karpenter.sh/nodepool: workload
        kubernetes.io/arch: amd64
      tolerations:
        - key: "workload-only"
          operator: Equal
          value: "true"
          effect: NoSchedule
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: cart-service
                topologyKey: kubernetes.io/hostname
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 25"]
          envFrom: []
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: secret-app-creds
              mountPath: /mnt/secrets/app-creds
              readOnly: true
            - name: config-tree
              mountPath: /mnt/config
              readOnly: true
            - name: tmp-volume
              mountPath: /tmp
            - name: app-logs-volume
              mountPath: /app/logs
      volumes:
        - name: secret-app-creds
          secret:
            secretName: localy-cart-db-secret
            defaultMode: 0400
        - name: config-tree
          configMap:
            name: cart-service-config
        - name: tmp-volume
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
        - name: app-logs-volume
          emptyDir:
            medium: Memory
            sizeLimit: 32Mi
        - name: secrets-ram
          emptyDir:
            medium: Memory
            sizeLimit: 8Mi
