workloads/cart-service/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: cart-service
  annotations:
    service.kubernetes.io/topology-mode: Auto
